objects/Contract.object
<CustomObject>
    <fields>
        <fullName>AR_Clause_Score__c</fullName>
        <formula>IF(
AND(
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Auto_renewal_clause__c=TRUE,
OR(
ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.YoY_Price_Increase__c,"Price Increase of 9% YoY"),
ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.YoY_Price_Increase__c,"Price Increase of 5.01 - 8.99%"),
ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.YoY_Price_Increase__c,"Price Increase of .01-5%")
)), 4*0.02, 

IF(
AND(
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Auto_renewal_clause__c=TRUE,
ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.YoY_Price_Increase__c,"No Price Increase")), 3*0.02, 1*0.02))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Clause - Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>AR_Clause__c</fullName>
        <formula>IF(ISPICKVAL(Primary_Opportunity__r.ARClause__c,"Yes"),"Yes","No")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AR Clause</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASAP_Meet_with_Contract_Owner__c</fullName>
        <formula>HYPERLINK("https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=" &amp; OwnerId ,
"Meet with Contract Owner" )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meet with Contract Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASAP_Meet_with_Signing_Customer__c</fullName>
        <formula>IF(CustomerSignedId &lt;&gt; "", 
HYPERLINK("https://asap2.convoq.com/meeting/sfmeetnow.aspx?lid=" &amp; CustomerSignedId ,
"Meet with Customer Signed By"),
"Customer not specified")</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Meet with Signing Customer</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Acceptance_Testing_Pro__c</fullName>
        <label>Acceptance Testing Provision</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>For the Professional Services</fullName>
                </value>
                <value>
                    <fullName>For the Services generally</fullName>
                </value>
                <value>
                    <fullName>On initial delivery of work product</fullName>
                </value>
                <value>
                    <fullName>Recurring basis after initial delivery</fullName>
                </value>
                <value>
                    <fullName>Partial payment if no acceptance</fullName>
                </value>
                <value>
                    <fullName>Non-rejection is deemed acceptance</fullName>
                </value>
                <value>
                    <fullName>Limited number of testing cycles</fullName>
                </value>
                <value>
                    <fullName>Customer test last &gt; 10 business days</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Acceptance_Testing_Provisions__c</fullName>
        <label>Acceptance Testing Provisions</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Annual_Contract_Value__c</fullName>
        <formula>Primary_Opportunity__r.New_Contract_Total__c</formula>
        <label>Annual Contract Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Assigned_Days_Count__c</fullName>
        <label>Assigned Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Audit_Rights__c</fullName>
        <label>Audit Rights</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Billing</fullName>
                </value>
                <value>
                    <fullName>Information Security</fullName>
                </value>
                <value>
                    <fullName>Billing and Information Security</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Renewal__c</fullName>
        <formula>TEXT(Primary_Opportunity__r.ARClause__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Auto Renewal</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Awat_Res_CIS_Days_Count__c</fullName>
        <label>Awat Res CIS Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awat_Res_Counerparty_Days_Count__c</fullName>
        <label>Awat. Res Counterparty Days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Awat_Res_Counterparty_Days_Count_New__c</fullName>
        <formula>Awat_Res_Counerparty_Days_Count__c
+
Ready_for_Signature_Days_Count__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Awat. Res Counterparty Days Count New</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Address__c</fullName>
        <formula>IF( ISBLANK( Primary_Opportunity__c ) ,  
  Project_Name__r.Vendor_Billing_Street__c &amp; ' ' &amp;  Project_Name__r.Vendor_Billing_City__c &amp; ' ' &amp;  Project_Name__r.Vendor_Billing_State_Province__c &amp; ' ' &amp;  Project_Name__r.Vendor_Billing_ZIP_Postal_Code__c &amp; ' ' &amp; Project_Name__r.Vendor_Billing_Country__c , 
    Account.BillingStreet &amp; ' ' &amp;  Account.BillingCity &amp; ' ' &amp;  Account.BillingState &amp; ' ' &amp;  Account.BillingPostalCode &amp; ' ' &amp;  Account.BillingCountry 
)</formula>
        <label>Billing Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <formula>IF(ISBLANK(SBQQ__Quote__c), "Annual Upfront", TEXT(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Billing_Frequency__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Frequency</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Unit__c</fullName>
        <formula>Primary_Opportunity__r.Opp_Owner_Role__c</formula>
        <label>Business Unit</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVII_Contract_Number__c</fullName>
        <formula>Primary_Opportunity__r.CVII_Contract_Number__c</formula>
        <label>CVII Contract Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CVII_customer_number__c</fullName>
        <formula>Primary_Opportunity__r.CVII_ID__c</formula>
        <label>CVII customer number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Carve_Out_Breach_of_Confid_3rd_Party__c</fullName>
        <label>Carve Out Breach of Confid (3rd Party)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_Out_Breach_of_Confid_Counterparty__c</fullName>
        <label>Carve Out Breach of Confid(Counterparty)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_Gross_Neg_Int_Mis_Vio_Damages__c</fullName>
        <label>Carve-out Gross Neg,Int,Mis,Vio Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_Gross_Neg_Int_Mis_Vio__c</fullName>
        <label>Carve-out Gross Neg,Int,Mis,Vio</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_IP_3rd_Party_Damages__c</fullName>
        <label>Carve-out IP (3rd Party) Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_IP_3rd_Party__c</fullName>
        <label>Carve-out IP (3rd Party)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_IP_CounterParty_Damages__c</fullName>
        <label>Carve-out IP (CounterParty) Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_IP_CounterParty__c</fullName>
        <label>Carve-out IP (CounterParty)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Carve_out_Indemnification__c</fullName>
        <label>Carve-out Indemnification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Chain_Regional_Mktg_Contact_1__c</fullName>
        <formula>Account.Chain_Regional_Mktg_Contact_1__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chain Regional Mktg. Contact # 1</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Change_of_Control__c</fullName>
        <label>Change of Control</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Right to prior notice</fullName>
                </value>
                <value>
                    <fullName>Right to prior consent</fullName>
                </value>
                <value>
                    <fullName>Terminate upon change of control</fullName>
                </value>
                <value>
                    <fullName>"No Consent Required</fullName>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
                <value>
                    <fullName>With Written Consent</fullName>
                </value>
                <value>
                    <fullName>With Written Consent (Excluding Affiliate / Merger / Transfer)"</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Choice_of_Forum__c</fullName>
        <label>Choice of Forum</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Choice_of_Law__c</fullName>
        <label>Choice of Law</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Executed_Date__c</fullName>
        <label>Closed/Executed Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Commitment_Date__c</fullName>
        <description>This date will be filled by DQ and Pete whenever a product enhancement request is approved or rejected</description>
        <label>Commitment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractReceived__c</fullName>
        <label>Contract Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ContractTermScore__c</fullName>
        <formula>IF(
AND(OR(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (with cancellation fee)"),
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (no cancellation fee)"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=TRUE
),
VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=1),0,

IF(
AND(OR(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (with cancellation fee)"),
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (no cancellation fee)"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=TRUE
),
VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=2),2*0.12,

IF(
AND(OR(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (with cancellation fee)"),
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (no cancellation fee)"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=TRUE
),
VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=3),3*0.12,

IF(
AND(OR(
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (with cancellation fee)"),
INCLUDES(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Early_Termination_Rights__c, "For Convenience (no cancellation fee)"),
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Opt_Out__c=TRUE
),
VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=4),3*0.12,

IF(VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=1, 1*0.12, 
IF(VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=2, 3*0.12, 
IF(VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=3, 4*0.12, 
IF(VALUE(Text(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Contract_Term_Years__c))=4, 4*0.12, 4*0.12
))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Contract Term - Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_End_Date__c</fullName>
        <formula>IF(  ISBLANK(Project_Name__c)  , Primary_Opportunity__r.ContractEndDate__c  ,  Project_Name__r.Contract_End_Date__c )</formula>
        <label>Contract End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Grade__c</fullName>
        <formula>IF(Total_Score__c=4 , "A", 
IF(Total_Score__c&lt;=3.99 &amp;&amp; Total_Score__c&gt;=3.7, "A-", 
IF(Total_Score__c&lt;=3.69 &amp;&amp; Total_Score__c&gt;=3.3, "B+", 
IF(Total_Score__c&lt;=3.29 &amp;&amp; Total_Score__c&gt;=3, "B",
IF(Total_Score__c&lt;=2.99 &amp;&amp; Total_Score__c&gt;=2.7, "B-",
IF(Total_Score__c&lt;=2.69 &amp;&amp; Total_Score__c&gt;=2.3, "C+",
IF(Total_Score__c&lt;=2.29 &amp;&amp; Total_Score__c&gt;=2, "C",
IF(Total_Score__c&lt;=1.99 &amp;&amp; Total_Score__c&gt;=1.7, "C-",
IF(Total_Score__c&lt;=1.69 &amp;&amp; Total_Score__c&gt;=1.3, "D+",
IF(Total_Score__c&lt;=1.29 &amp;&amp; Total_Score__c&gt;=1, "D", 
IF(Total_Score__c&lt;=0.99 &amp;&amp; Total_Score__c&gt;=0.7, "D-", 
"NA")))))))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Grade</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Implemented__c</fullName>
        <formula>Primary_Opportunity__r.Contract_Implemented__c</formula>
        <label>Contract Implemented</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Name__c</fullName>
        <formula>IF(
 NOT(ISBLANK( Primary_Opportunity__c )), 
 "C - " &amp; TEXT(Primary_Opportunity__r.ContractStartDate__c) &amp; " " &amp;  Primary_Opportunity__r.Name , 
 IF(NOT(ISBLANK( Project_Name__c )), 
 "P - " &amp; TEXT( Project_Name__r.Contract_Start_Date__c ) &amp; " " &amp;   Project_Name__r.Name  , 
 ""))</formula>
        <label>Contract Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Opt_Out_Deadline__c</fullName>
        <label>Contract Opt-Out Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Opt_Out_Provision__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contract Opt-Out Provision?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Record_Type_Name__c</fullName>
        <formula>RecordType.DeveloperName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Record Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Request_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Contract Request Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <formula>IF( ISBLANK( Project_Name__c ) ,  Primary_Opportunity__r.ContractStartDate__c ,  Project_Name__r.Contract_Start_Date__c)</formula>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Term_Years__c</fullName>
        <description>Contract duration in years.</description>
        <inlineHelpText>Contract duration in years.</inlineHelpText>
        <label>Contract Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Contract_Duration</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Title__c</fullName>
        <description>Created for Contract Management.</description>
        <label>Contract Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts_Exceptions_Charted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Contracts Exceptions Charted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contractual_Restrictions_on_Email_Market__c</fullName>
        <label>Contractual Restrictions Email Marketing</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Domain Level Opt-Out (Administrative Communications Only)</fullName>
                </value>
                <value>
                    <fullName>Opt-Out All Customer Contacts (Subsequent Contacts Marketable)</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Count_towards_scoring__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Count towards scoring?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counterparty_Code_of_Conduct__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Customer Compliance Policies</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Creation_to_Execution__c</fullName>
        <label>Creation to Execution days Count</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Status_Days_Count__c</fullName>
        <formula>IF(
TODAY()-Status_Change_Date__c = 0,1,(TODAY() - Status_Change_Date__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Status Days Count</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_Year__c</fullName>
        <label>Current Year</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CustomActiveContract__c</fullName>
        <defaultValue>1</defaultValue>
        <label>CustomActiveContract</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Custom_Payment_Terms__c</fullName>
        <label>Custom Payment Terms</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Comments__c</fullName>
        <label>Customer Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Expected_Date__c</fullName>
        <description>This field is being utilized by product enhancement team for the product enhancement expected date of customer. This will be filled by Sales Rep</description>
        <inlineHelpText>By when Customer expects this Product Enhancement is delivered</inlineHelpText>
        <label>Customer Expected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_By__c</fullName>
        <label>Customer Signed By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Cvent_Business_Restrictions__c</fullName>
        <label>Cvent Business Restrictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Exclusivity (counterparty competitors)</fullName>
                </value>
                <value>
                    <fullName>Exclusivity (industry, geography etc)</fullName>
                </value>
                <value>
                    <fullName>Prior notice - Service Providers</fullName>
                </value>
                <value>
                    <fullName>Prior consent - Service Providers</fullName>
                </value>
                <value>
                    <fullName>Non-competition</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cvent_Right_to_Assign_Score__c</fullName>
        <formula>IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Cvent_Right_to_Assign__c,"No Consent Required"),4*0.01, 
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Cvent_Right_to_Assign__c,"Silent"),4*0.01, 
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Cvent_Right_to_Assign__c,"With Written Consent"),1*0.01, 
IF(ISPICKVAL(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Cvent_Right_to_Assign__c,"With Written Consent (Excluding Affiliate / Merger / Transfer)"),4*0.01,0*0.01))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cvent Right to Assign Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cvent_Right_to_Assign__c</fullName>
        <label>Cvent Right to Assign</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Consent Required</fullName>
                </value>
                <value>
                    <fullName>Silent</fullName>
                </value>
                <value>
                    <fullName>With Written Consent</fullName>
                </value>
                <value>
                    <fullName>With Written Consent (Excluding Affiliate / Merger / Transfer)</fullName>
                    <default>true</default>
                    <label>With Written Consent (Excluding Affiliate / Merger / Transfer)</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DM_Testable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DM Testable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Damages_limited_Highly_Sens_PI_Damages__c</fullName>
        <label>Damages limited - Highly Sens PI Damages</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Up to $250k</fullName>
                </value>
                <value>
                    <fullName>$250k - $500k</fullName>
                </value>
                <value>
                    <fullName>$501k - $1 million</fullName>
                </value>
                <value>
                    <fullName>$1-3 million</fullName>
                </value>
                <value>
                    <fullName>$3-5 million</fullName>
                </value>
                <value>
                    <fullName>over $5 million</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Damages_limited_Highly_Sens_PI__c</fullName>
        <label>Damages limited - Highly Sens PI</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_privacy_or_security_addendum__c</fullName>
        <label>Data privacy or security addendum?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
                <value>
                    <fullName>Cvent</fullName>
                </value>
                <value>
                    <fullName>Customer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DecommissionDate__c</fullName>
        <label>Decommission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delayed_Invoicing__c</fullName>
        <formula>IF(ISBLANK(SBQQ__Quote__c), FALSE, 
SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Delayed_Invoicing__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Delayed Invoicing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Direct_Damages_Carve_out__c</fullName>
        <label>Direct Damages (Carve-out)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Carve-out Data Breach</fullName>
                </value>
                <value>
                    <fullName>Carve-out Breach of Confid</fullName>
                </value>
                <value>
                    <fullName>Carve-out Intentional misconduct, fraud</fullName>
                </value>
                <value>
                    <fullName>Carve-out Violation of law</fullName>
                </value>
                <value>
                    <fullName>Carve-out Gross Negligence</fullName>
                </value>
                <value>
                    <fullName>Carve-out IP infringement</fullName>
                </value>
                <value>
                    <fullName>Carve-out Indemnification (Other than IP infringement)</fullName>
                </value>
                <value>
                    <fullName>Carve-out injury to persons or property</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                    <default>true</default>
                    <label>None</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Direct_Damages__c</fullName>
        <label>Direct Damages $</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Discount_to_List_Price_Score__c</fullName>
        <formula>IF( 

DATEVALUE(CreatedDate) &lt; DATE(2018,08,06), 


IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Total_Term_Discount__c*100)&lt;10,4*0.12, 
IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Total_Term_Discount__c*100)&lt;20,3*0.12, 
IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.Total_Term_Discount__c*100)&lt;30,2*0.12, 
1*0.12))), 



IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.New_Term_Discount__c*100)&lt;10,4*0.12, 
IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.New_Term_Discount__c*100)&lt;20,3*0.12, 
IF( 
(SBQQ__Opportunity__r.SBQQ__PrimaryQuote__r.New_Term_Discount__c*100)&lt;30,2*0.12, 
1*0.12)))

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Discount to List Price - Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Discount_to_Rack_Rate__c</fullName>
        <label>Discount to Rack Rate</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>up to 10%</fullName>
                </value>
                <value>
                    <fullName>11-20%</fullName>
                </value>
                <value>
                    <fullName>20-30%</fullName>
                </value>
                <value>
                    <fullName>30+%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Document_Type__c</fullName>
        <inlineHelpText>Legal review is required where Document Type equals “Cvent Modified Terms” or “Customer Terms”</inlineHelpText>
        <label>Document Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Cvent Standard Terms</fullName>
                    <default>true</default>
                    <label>Cvent Standard Terms</label>
                </value>
                <value>
                    <fullName>Cvent Modified Terms</fullName>
                </value>
                <value>
                    <fullName>Customer Terms</fullName>
                </value>
                <value>
                    <fullName>Procurement Contract – Cvent Form (Standard Terms)</fullName>
                </value>
                <value>
                    <fullName>Procurement Contract – Cvent Form (Modified Terms)</fullName>
                </value>
                <value>
                    <fullName>Procurement Contract – Counterparty Form</fullName>
                </value>
                <value>
                    <fullName>Other Form of Contract</fullName>
                </value>
                <value>
                    <fullName>Upsell – No Review Required</fullName>
                </value>
                <value>
                    <fullName>Upsell – Review Required</fullName>
                </value>
                <value>
                    <fullName>Amendment for Existing Agreement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>